--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1 class="col-12">Paranormal Encounters</h1>
         </div>
         <div class="row">
-          <div class="auth col-12 col-lg-3 panel">
+          <div class="side-bar col-12 col-lg-3 panel">
 
             <!--Message Center-->
             <div>
@@ -120,15 +120,15 @@
             </div> <!--ends change password-->
 
             <!--sign out-->
-            <div class="sign-out">
+            <div>
               <form class="sign-out">
-                <button>Sign Out!</button>
+                <button class="btn">Sign Out!</button>
               </form>
             </div>
 
             <!--Getting all encounters modals-->
             <div>
-              <button class="get-all-encounters">See All Encounters</button>
+              <button class="get-all-encounters btn">See All Encounters</button>
             </div>
 
             <!-- <div>
@@ -312,7 +312,7 @@
                         <h5> About the Entity: </h5>
                         Entity Type:<span class="required field">*</span> <select name="encounter[entity_type]">
                           <option value="Apparition">Apparition</option>
-                          <option value="Ghost">Ghost</option>
+                          <option value="Haunting Ghost">Haunting Ghost</option>
                           <option value="Poltergeist">Poltergeist</option>
                           <option value="Demon">Demon</option>
                           <option value="Cryptid">Cryptid</option>
@@ -342,18 +342,23 @@
               </div> <!--ends modal-->
             </div>
             <div class="background-info">
-              <h5>Ghosts</h5>
-              <p>Also referred to as a "haunting" or a "residual haunting," this type of entity appears to be a recording of energy that replays itself over and over again. Hauntings usually exists in a location where a person or animal repeated the same task over and over during its life. Some investigators believe through repetition, a psychic imprint is left within that space and remains long after the person or animal has passed away.</p>
-              <h5>Apparitions</h5>
+              <h5><a href="https://en.wikipedia.org/wiki/Ghost">Haunting Ghosts</a></h5>
+              <p>Also referred to as a "haunting" or a "residual haunting," this type of entity appears to be a recording of energy that replays itself over and over again. Hauntings usually exist in a location where a person or animal repeated the same task over and over during its life. Some investigators believe through repetition, a psychic imprint is left within that space and remains long after the person or animal has passed away.</p>
+
+              <h5><a href="">Apparitions</a></h5>
               <p>Unlike hauntings, apparitions appear to interact intelligently with people in the living world. Spirits may knock, open and close doors or cupboards, move objects, answer questions on voice recorders, and sometimes even interact with electronic equipment like flashlights and EMF (Electro-Magnetic Field) meters. The existing, yet unproven, one hypothesis states spirits are made up of energies of varying power levels, and they take energy out of the area around them in order to manifest those interactions.</p>
-              <h5>Poltergeists</h5>
+
+              <h5><a href="https://en.wikipedia.org/wiki/Poltergeist">Poltergeists</a></h5>
               <p>Poltergeist activity is the manifestation of certain types of activity that can be attributed to either apparitions or people in which objects appear to move on their own. This occurs through the use of telekinesis, which is essentially bursts of psychic energy that cause objects to move, doors to open, knocking sounds, and more.</p>
-              <h5>Demons</h5>
+
+              <h5><a href="https://en.wikipedia.org/wiki/Demon">Demons</a></h5>
               <p>Demons are believed to be entities of pure darkness and evil commanded by Satan himself. Evidence from possessed individuals and extremely violent poltergeist cases suggest a form of violent and hateful entity certainly exists in a parallel reality. These cases involve anything from objects flying across the room to shoves and pushes from invisible forces. People have even reported being pinned down, punched, and scratched by unseen assailants.</p>
-              <h5>Cryptids</h5>
+
+              <h5><a href="https://en.wikipedia.org/wiki/List_of_cryptids">Cryptids</a></h5>
               <p>Cryptids are mainly plants, animals, and other eukaryotes not recognized by the scientific community or thought to be extinct. Examples of cryptids include Bigfoot, Yetis, the Loch Ness Monster, Thunderbirds, and Pukwudgees.</p>
-              <h5>Aliens & UFO's</h5>
-              <p>More specifically extraterrestrial intelligent life and unidentified flying objects. There have been many reports of UFO sightings dating back to 1440 B.C. and alien encounters of third and fourth kind with plausible enough evidence to be investigated by multiple governments.</p>
+
+              <h5><a href="https://en.wikipedia.org/wiki/List_of_alleged_extraterrestrial_beings">Aliens</a> & <a href="https://en.wikipedia.org/wiki/List_of_reported_UFO_sightings">UFO's</a></h5>
+              <p>More specifically extraterrestrial intelligent life and unidentified flying objects. There have been many reports of UFO sightings dating back to 1440 B.C. and alien encounters of third and fourth kind with plausible enough evidence to be investigated by multiple governments.</p></a>
             </div>
             <!-- <div>
               <p class="resource-action-message"> Message </p>
