--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
             </div>
           </div> <!--ends column-->
         </div> <!--ends row-->
+        <footer>
+          Made by Regina Scott at General Assembly, 2019
+        </footer>
       </div> <!--ends container-->
     </body>
 </html>
