Made all forms clear onSignOut
Also made placeholders on forms shorter

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <h4>Updated Information:</h4>
                         Date of the Encounter: <span class="required field">*</span> <input type="date" name="encounter[date_of_encounter]"><br/>
                         Approximate Time of the Encounter: <span class="required field">*</span> <input type="time" name="encounter[time_of_encounter]"><br/>
-                        Location: <span class="required field">*</span> <input type="text" name="encounter[location]" placeholder="Ex: Whaley House, San Diego, CA"><br/>
+                        Location: <span class="required field">*</span> <input type="text" name="encounter[location]" placeholder="Ex: Whaley House"><br/>
                         Weather During Encounter: <select name="encounter[weather]">
                           <option value="Sunny">Sunny</option>
                           <option value="Clear Sky">Clear Sky</option>
@@ -200,7 +200,7 @@
                           <option value="Humid">Humid</option>
                         </select> </br>
                         Number of People: <input type="number" name="encounter[number_of_people]" min="0" step="1" placeholder="include yourself!"><br/>
-                        What You Were Wearing:<input type="text" name="encounter[wearing]" placeholder="Ex: Red shirt and blue jeans."><br/>
+                        What You Were Wearing:<input type="text" name="encounter[wearing]" placeholder="Ex: Red shirt & jeans."><br/>
                         <br>
                         <h4> About the Entity: </h4>
                         Entity Type:<span class="required field">*</span> <select name="encounter[entity_type]">
@@ -292,7 +292,7 @@
                       <form id="encounter-info">
                         Date of the Encounter: <span class="required field">*</span> <input type="date" name="encounter[date_of_encounter]"><br/>
                         Approximate Time of the Encounter: <span class="required field">*</span> <input type="time" name="encounter[time_of_encounter]"><br/>
-                        Location: <span class="required field">*</span> <input type="text" name="encounter[location]" placeholder="Ex: Whaley House, San Diego, CA"><br/>
+                        Location: <span class="required field">*</span> <input type="text" name="encounter[location]" placeholder="Ex: Whaley House"><br/>
                         Weather During Encounter: <select name="encounter[weather]">
                           <option value="Sunny">Sunny</option>
                           <option value="Clear Sky">Clear Sky</option>
@@ -307,7 +307,7 @@
                           <option value="Humid">Humid</option>
                         </select> </br>
                         Number of People: <input type="number" name="encounter[number_of_people]" min="0" step="1" placeholder="include yourself!"><br/>
-                        What You Were Wearing:<input type="text" name="encounter[wearing]" placeholder="Ex: Red shirt and blue jeans."><br/>
+                        What You Were Wearing:<input type="text" name="encounter[wearing]" placeholder="Ex: Red shirt & jeans."><br/>
                         <br>
                         <h4> About the Entity: </h4>
                         Entity Type:<span class="required field">*</span> <select name="encounter[entity_type]">
