Removed all console.logs
Removed all console logs and edited one form typo error in html.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <h4> About the Entity: </h4>
                         Entity Type:<span class="required field">*</span> <select name="encounter[entity_type]">
                           <option value="Apparition">Apparition</option>
-                          <option value="Ghost">Ghost</option>
+                          <option value="Haunting Ghost">Haunting Ghost</option>
                           <option value="Poltergeist">Poltergeist</option>
                           <option value="Demon">Demon</option>
                           <option value="Cryptid">Cryptid</option>
