Made sign up automatically sign a user in
When a user signs up, they are automatically logged in now.
Also changed number of seconds on message-center fadeOut from 3 to 5

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         placeholder="Enter Password">
                         <input type="password" name="credentials[password_confirmation]"
                         placeholder="Enter Password Again"></br>
-                        <button>Sign Up!</button>
+                        <button class="btn">Sign Up!</button>
                       </form>
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                     </div>
@@ -75,7 +75,7 @@
                         <input class="sign-in-start" type="email" name="credentials[email]" placeholder="Enter Email">
                         <input class="sign-in-start" type="password" name="credentials[password]"
                         placeholder="Enter Password">
-                        <button>Sign In!</button>
+                        <button class="btn">Sign In!</button>
                       </form>
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                     </div>
@@ -106,7 +106,7 @@
                         placeholder="Enter Old Password">
                         <input type="password" name="passwords[new]"
                         placeholder="Enter New Password">
-                        <button type="submit">Change Password!</button>
+                        <button class="btn" type="submit">Change Password!</button>
                       </form>
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                     </div>
@@ -152,7 +152,7 @@
                       <form id="showEncounterForm">
                         Which encounter would you like to look up?</br>
                         <input type="number" name="encounter[id]" min="0" step="1"><br/>
-                        <button type="submit" id="show-encounter-submit">Submit</button>
+                        <button class="btn" type="submit" id="show-encounter-submit">Submit</button>
                       </form>
                     </div>
                   </div>
@@ -230,7 +230,7 @@
                         Entity Appearance:<span class="required field">*</span> <input type="text" name="encounter[appearance]" placeholder="Ex: Colonial Garb."><br/>
                         Encounter Description:<span class="required field">*</span> <input type="text" name="encounter[encounter_description]" placeholder="Ex: Slammed Door."><br/>
                         <br>
-                        <button type="submit" id="update-encounter-submit">Submit</button>
+                        <button class="btn" type="submit" id="update-encounter-submit">Submit</button>
                       </form>
                     </div>
                   </div>
@@ -259,7 +259,7 @@
                       <form id="deleteEncounterForm">
                         Which encounter would you like to delete?</br>
                         <input type="number" name="encounter[id]" min="0" step="1"><br/>
-                        <button type="submit" id="delete-encounter-submit">Submit</button>
+                        <button class="btn" type="submit" id="delete-encounter-submit">Submit</button>
                       </form>
                     </div>
                   </div>
@@ -340,7 +340,7 @@
                         Entity Appearance:<span class="required field">*</span> <input type="text" name="encounter[appearance]" placeholder="Ex: Colonial Garb."><br/>
                         Encounter Description:<span class="required field">*</span> <input type="text" name="encounter[encounter_description]" placeholder="Ex: Slammed Door."><br/>
                         <br>
-                        <button type="submit" id="create-encounter-submit">Submit</button>
+                        <button class="btn" type="submit" id="create-encounter-submit">Submit</button>
                       </form>
                     </div>
                   </div>
