--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="changePasswordLabel">Sign In</h5>
+                      <h5 class="modal-title" id="changePasswordLabel">Change Password</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
@@ -122,14 +122,15 @@
               </form>
             </div>
 
-            <!--Getting all encounters modals-->
-            <div>
-              <button class="get-all-encounters btn btn-block">See All Encounters</button>
+            <!--Getting all of MY encounters modal-->
+            <div class="expand-to-height-of-child">
+              <button class="get-my-encounters btn btn-block">See My Encounters</button>
             </div>
 
-            <!-- <div>
-              <button>See My Encounters</button>
-            </div>  (stretch goal)-->
+            <!--Getting all encounters modal-->
+            <div class="expand-to-height-of-child">
+              <button class="get-all-encounters btn btn-block">See All Encounters</button>
+            </div>
 
             <!--Show Encounter-->
             <div class="show-encounter">
@@ -186,7 +187,7 @@
                         Encounter ID: <input type="number" name="encounter[id]" min="0" step="1"><br/>
                         <br>
                         <h4>Updated Information:</h4>
-                        Date of the Encounter: <span class="required field">*</span> <input type="date" name="encounter[date_of_encounter]"><br/>
+                        Date of the Encounter: <span class="required field">*</span> <input id="today-date-max-update" type="date" name="encounter[date_of_encounter]min="1900-01-01" required"><br/>
                         Approximate Time of the Encounter: <span class="required field">*</span> <input type="time" name="encounter[time_of_encounter]"><br/>
                         Location: <span class="required field">*</span> <input type="text" name="encounter[location]" placeholder="Ex: Whaley House"><br/>
                         Weather During Encounter: <select name="encounter[weather]">
@@ -278,7 +279,7 @@
             <!-- Button trigger modal -->
             <div class="create-encounter">
               <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#createEncounter">
-                Had an Encounter? Click here to log it now!
+                <strong>Had an Encounter? Click here to log it now!</strong>
               </button>
               <!-- Modal -->
               <div class="modal fade" id="createEncounter" tabindex="-1" role="dialog" aria-labelledby="createEncounterTitle" aria-hidden="true">
