Added HTML fix my encounters

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <!--CHANGE PASSWORD-->
             <div class="change-password">
-              <!-- Sign in Modal Button -->
+              <!-- Change PW Modal Button -->
               <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#changePassword">
                 Change Password
               </button>
